integrated the api call for compagnies, and job.
