# server/app/Http/Controllers/API/OpenApiSchemas.php
@@ -13,7 +13,7 @@ namespace App\Http\Controllers\API;
  * )
  * 
  * @OA\Server(
- *     url="http://localhost:8000",
+ *     url="http://localhost:8010",
  *     description="Serveur de développement"
  * )
  * 
